--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">E-mail</label>
-          <input type="text" class="form-control ${errors.email.length ? 'is-invalid': ''}" id="email" name="email" value="${email}">
+          <input type="text" class="form-control ${errors.email.length ? 'is-invalid': ''}" id="email" name="email" value="">
           <div class="invalid-feedback">
             
           </div>
         </div>
         <div class="mb-3">
           <label for="title" class="form-label">Título</label>
-          <input type="text" class="form-control ${errors.title.length ? 'is-invalid': ''}" id="title" name="title" value="${title}">
+          <input type="text" class="form-control ${errors.title.length ? 'is-invalid': ''}" id="title" name="title" value="">
           <div class="invalid-feedback">
             
           </div>
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Mensagem</label>
-          <textarea class="form-control ${errors.message.length ? 'is-invalid': ''}" id="message" name="message">${message}</textarea>
+          <textarea class="form-control ${errors.message.length ? 'is-invalid': ''}" id="message" name="message"></textarea>
           <div class="invalid-feedback">         
           </div>
         </div>
